# ingradient

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  sql_app.db
config/: kratos.yml
electron/: main.js  package-lock.json  package.json  preload.js
go_server/: go.mod  go.sum  local.db  plugin_executor.py
go_server/cmd/: main.go
go_server/config/: config.go
go_server/database/: database.go
go_server/dto/: image_types.go
go_server/models/: associations.go  models.go
go_server/routes/: classes.go  datasets.go  images.go  labels.go  pluigin.go  uploads.go
go_server/utils/: string_utils.go
ingradient/: cli.py  client.py  server.py
ingradient/web/: package-lock.json  package.json  server.js
ingradient_sdk/: cli.py  utils.py
ingradient_sdk/cli/: main.py
ingradient_sdk/plugin/: base_plugin.py  plugin_manager.py
scripts/: Dockerfile  deploy.sh  docker-compose.yml  start.sh
server/: .gitignore  main.py  requirements.txt  server.py  server_launcher.py  utils.py
server/api/: admin.py  auth.py  classes.py  datasets.py  images.py  labels.py  models.py  projects.py  uploads.py
server/core/: auth.py  cleanup.py  config.py  websockets.py
server/db/: association_tables.py  database.py  models.py
web/: jsconfig.json  next.config.js  package-lock.json  package.json  server.js
web/scripts/: copy-build.js
web/src/: config.js
web/src/app/: layoutTextEditor.js  page.js  pageTextEditor.js  registry.js
web/src/config/: environment.js  models.js
(+106 files in other folders)
